[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/scenes/UI/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://resources/assets/ui/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/scenes/UI/LevelComplete.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="LevelComplete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -201.0
margin_top = 192.0
margin_right = -1.0
margin_bottom = 192.0
rect_scale = Vector2( 2.2, 0.2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade1" type="TextureButton" parent="Upgrades"]
margin_right = 64.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
expand = true

[node name="Upgrade2" type="TextureButton" parent="Upgrades"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
expand = true

[node name="Upgrade3" type="TextureButton" parent="Upgrades"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
expand = true

[node name="NextLevelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 113.0
margin_right = 22.0
margin_bottom = 153.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
disabled = true
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILabels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UILabels"]
margin_left = 522.0
margin_top = 380.0
margin_right = 650.0
margin_bottom = 428.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Time: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeValue" type="Label" parent="UILabels"]
margin_left = 706.0
margin_top = 380.0
margin_right = 806.0
margin_bottom = 428.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congrats" type="Label" parent="UILabels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 465.0
margin_top = 92.0
margin_right = 809.0
margin_bottom = 140.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Level Complete!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseUpgrade" type="Label" parent="UILabels"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 444.0
margin_top = 142.0
margin_right = 836.0
margin_bottom = 190.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Choose an upgrade:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="UILabels"]
margin_left = 506.0
margin_top = 340.0
margin_right = 642.0
margin_bottom = 388.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelValue" type="Label" parent="UILabels"]
margin_left = 706.0
margin_top = 340.0
margin_right = 806.0
margin_bottom = 388.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Upgrades/Upgrade1" to="." method="_on_Upgrade1_pressed"]
[connection signal="pressed" from="Upgrades/Upgrade2" to="." method="_on_Upgrade2_pressed"]
[connection signal="pressed" from="Upgrades/Upgrade3" to="." method="_on_Upgrade3_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
